// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DropdownMenu Is hidden 1`] = `
.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #006296;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c5:focus {
  outline: none;
}

.c5:focus {
  outline: none;
  box-shadow: 0 0 0 2px #84C6EA;
  box-shadow: 0 0 0 3px #84C6EA,0 0 0 1px #006296;
}

.c5:focus:not(:focus-visible) {
  box-shadow: none;
}

.c5:focus-visible {
  outline: none;
  box-shadow: 0 0 0 2px #84C6EA;
  box-shadow: 0 0 0 3px #84C6EA,0 0 0 1px #006296;
}

.c8 {
  margin-left: var(--spacing-half);
  margin-right: 0;
}

.c6 {
  color: #006296;
  font-size: 0.875rem;
}

.c6:hover {
  color: #003A5A;
}

.c6:visited {
  color: #62a;
}

.c6:visited svg {
  color: #62a;
}

.c7 {
  color: #000000;
  display: block;
  line-height: 2rem;
  overflow: hidden;
  padding: 0 var(--spacing-2x) 0 var(--spacing-3x);
  -webkit-text-decoration: none;
  text-decoration: none;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c7:focus {
  box-shadow: inset 0 0 0 3px #84C6EA,inset 0 0 0 1px #006296;
  outline: none;
}

.c7:hover {
  background-color: #DBDEE1;
}

.c7[disabled] {
  color: #B7BBC2;
  fill: #B7BBC2;
  pointer-events: none;
}

.c1 {
  margin: 0;
  overflow-y: auto;
  padding: 0;
}

.c1:not(:last-child)::after {
  border-bottom: 1px solid #DBDEE1;
  content: "";
  display: block;
  margin: 0 var(--spacing-2x);
}

.c4 {
  line-height: 1.5rem;
  margin: auto 0;
  margin-right: var(--spacing-1x);
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  font-size: 0.875rem;
  height: 100%;
  margin: 0;
  overflow: hidden;
  padding: 0;
  padding-left: var(--spacing-half);
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #000000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  height: 2rem;
  line-height: 2rem;
  padding: 0 var(--spacing-2x);
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
}

.c2:focus {
  box-shadow: inset 0 0 0 3px #84C6EA,inset 0 0 0 1px #006296;
  outline: none;
}

.c2:hover {
  background-color: #DBDEE1;
}

.c2[disabled],
.c2[disabled] * {
  color: #B7BBC2;
  cursor: default;
  fill: #B7BBC2;
  pointer-events: none;
}

.c0 {
  background-color: #FFFFFF;
  border: 1px solid #60666E;
  border-radius: var(--border-radius);
  box-shadow: 0 10px 20px 0 rgba(0,0,0,0.19);
  color: #000000;
  list-style-type: none;
  position: absolute;
  width: 100%;
}

<div
  class="c0"
  data-testid="menu-list"
  hidden=""
>
  <ul
    aria-labelledby="firstGroup"
    class="c1"
    role="group"
  >
    <li>
      <a
        aria-disabled="false"
        class="c2"
        data-testid="listitem-optionA"
        href="/testA"
        tabindex="0"
      >
        <span
          class="c3"
        >
          <span
            class="c4"
          >
            optionA
          </span>
        </span>
      </a>
    </li>
    <li>
      <a
        aria-disabled="false"
        class="c2"
        data-testid="listitem-optionB"
        href="/testB"
        tabindex="0"
      >
        <span
          class="c3"
        >
          <span
            class="c4"
          >
            optionB
          </span>
        </span>
      </a>
    </li>
    <li>
      <a
        aria-disabled="false"
        class="c2"
        data-testid="listitem-optionC"
        href="/testC"
        tabindex="0"
      >
        <span
          class="c3"
        >
          <span
            class="c4"
          >
            optionC
          </span>
        </span>
      </a>
    </li>
  </ul>
  <ul
    aria-labelledby="secondGroup"
    class="c1"
    role="group"
  >
    <li>
      <a
        aria-disabled="false"
        class="c5 c6 c7"
        href="https://external-link.com/a"
        target="_blank"
        type="external"
      >
        ExternalA
        <svg
          aria-label="open in new window"
          class="c8"
          color="currentColor"
          focusable="false"
          height="16"
          role="img"
          width="16"
        />
      </a>
    </li>
    <li>
      <a
        aria-disabled="false"
        class="c5 c6 c7"
        href="https://external-link.com/b"
        target="_blank"
        type="external"
      >
        ExternalB
        <svg
          aria-label="open in new window"
          class="c8"
          color="currentColor"
          focusable="false"
          height="16"
          role="img"
          width="16"
        />
      </a>
    </li>
    <li>
      <a
        aria-disabled="false"
        class="c5 c6 c7"
        href="https://external-link.com/c"
        target="_blank"
        type="external"
      >
        ExternalC
        <svg
          aria-label="open in new window"
          class="c8"
          color="currentColor"
          focusable="false"
          height="16"
          role="img"
          width="16"
        />
      </a>
    </li>
  </ul>
</div>
`;

exports[`DropdownMenu Matches the snapshot 1`] = `
.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #006296;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c5:focus {
  outline: none;
}

.c5:focus {
  outline: none;
  box-shadow: 0 0 0 2px #84C6EA;
  box-shadow: 0 0 0 3px #84C6EA,0 0 0 1px #006296;
}

.c5:focus:not(:focus-visible) {
  box-shadow: none;
}

.c5:focus-visible {
  outline: none;
  box-shadow: 0 0 0 2px #84C6EA;
  box-shadow: 0 0 0 3px #84C6EA,0 0 0 1px #006296;
}

.c8 {
  margin-left: var(--spacing-half);
  margin-right: 0;
}

.c6 {
  color: #006296;
  font-size: 0.875rem;
}

.c6:hover {
  color: #003A5A;
}

.c6:visited {
  color: #62a;
}

.c6:visited svg {
  color: #62a;
}

.c7 {
  color: #000000;
  display: block;
  line-height: 2rem;
  overflow: hidden;
  padding: 0 var(--spacing-2x) 0 var(--spacing-3x);
  -webkit-text-decoration: none;
  text-decoration: none;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c7:focus {
  box-shadow: inset 0 0 0 3px #84C6EA,inset 0 0 0 1px #006296;
  outline: none;
}

.c7:hover {
  background-color: #DBDEE1;
}

.c7[disabled] {
  color: #B7BBC2;
  fill: #B7BBC2;
  pointer-events: none;
}

.c1 {
  margin: 0;
  overflow-y: auto;
  padding: 0;
}

.c1:not(:last-child)::after {
  border-bottom: 1px solid #DBDEE1;
  content: "";
  display: block;
  margin: 0 var(--spacing-2x);
}

.c4 {
  line-height: 1.5rem;
  margin: auto 0;
  margin-right: var(--spacing-1x);
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  font-size: 0.875rem;
  height: 100%;
  margin: 0;
  overflow: hidden;
  padding: 0;
  padding-left: var(--spacing-half);
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #000000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  height: 2rem;
  line-height: 2rem;
  padding: 0 var(--spacing-2x);
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
}

.c2:focus {
  box-shadow: inset 0 0 0 3px #84C6EA,inset 0 0 0 1px #006296;
  outline: none;
}

.c2:hover {
  background-color: #DBDEE1;
}

.c2[disabled],
.c2[disabled] * {
  color: #B7BBC2;
  cursor: default;
  fill: #B7BBC2;
  pointer-events: none;
}

.c0 {
  background-color: #FFFFFF;
  border: 1px solid #60666E;
  border-radius: var(--border-radius);
  box-shadow: 0 10px 20px 0 rgba(0,0,0,0.19);
  color: #000000;
  list-style-type: none;
  position: absolute;
  width: 100%;
}

<div
  class="c0"
  data-testid="menu-list"
>
  <ul
    aria-labelledby="firstGroup"
    class="c1"
    role="group"
  >
    <li>
      <a
        aria-disabled="false"
        class="c2"
        data-testid="listitem-optionA"
        href="/testA"
        tabindex="0"
      >
        <span
          class="c3"
        >
          <span
            class="c4"
          >
            optionA
          </span>
        </span>
      </a>
    </li>
    <li>
      <a
        aria-disabled="false"
        class="c2"
        data-testid="listitem-optionB"
        href="/testB"
        tabindex="0"
      >
        <span
          class="c3"
        >
          <span
            class="c4"
          >
            optionB
          </span>
        </span>
      </a>
    </li>
    <li>
      <a
        aria-disabled="false"
        class="c2"
        data-testid="listitem-optionC"
        href="/testC"
        tabindex="0"
      >
        <span
          class="c3"
        >
          <span
            class="c4"
          >
            optionC
          </span>
        </span>
      </a>
    </li>
  </ul>
  <ul
    aria-labelledby="secondGroup"
    class="c1"
    role="group"
  >
    <li>
      <a
        aria-disabled="false"
        class="c5 c6 c7"
        href="https://external-link.com/a"
        target="_blank"
        type="external"
      >
        ExternalA
        <svg
          aria-label="open in new window"
          class="c8"
          color="currentColor"
          focusable="false"
          height="16"
          role="img"
          width="16"
        />
      </a>
    </li>
    <li>
      <a
        aria-disabled="false"
        class="c5 c6 c7"
        href="https://external-link.com/b"
        target="_blank"
        type="external"
      >
        ExternalB
        <svg
          aria-label="open in new window"
          class="c8"
          color="currentColor"
          focusable="false"
          height="16"
          role="img"
          width="16"
        />
      </a>
    </li>
    <li>
      <a
        aria-disabled="false"
        class="c5 c6 c7"
        href="https://external-link.com/c"
        target="_blank"
        type="external"
      >
        ExternalC
        <svg
          aria-label="open in new window"
          class="c8"
          color="currentColor"
          focusable="false"
          height="16"
          role="img"
          width="16"
        />
      </a>
    </li>
  </ul>
</div>
`;
